# portalprocessos

./: .pre-commit-config.yaml  README.md  mypy.ini  pre-commit-config.yaml  pyproject.toml  requirements.txt
api/: routes.py
application/: main.py
db/: session.py
migrations/: env.py
migrations/versions/: 4f28e5d2e9fa_correct_typo_on_grupo.py  51ec1a04898b_microprocesso_created.py  63e414f7d1df_add_relationships_delete_links.py  a436dbb69907_macroprocesso_created.py  b02d77ec3942_first_migration.py  bcd58980dd72_2023_06_19_microprocesso_created.py
models/: grupo.py  macroprocesso.py  microprocesso.py
repository/: grupo.py  macroprocesso.py  microprocesso.py
static/css/: custom.css
static/js/: custom.js
templates/: base.html  create_grupo.html  create_macro.html  dashboard.html  grupo.html  index.html  macroprocesso.html  menuitems.html  toast.html
tests/: conftest.py
tests/test_api/: test_routes.py
tests/test_application/: test_main.py
tests/test_db/: test_session.py
tests/test_repository/: test_grupo.py  test_macroprocesso.py  test_microprocesso.py
webapp/: routes.py
