[tool.poetry]
name = "portalprocessos"
version = "0.1.0"
description = "A web application to hold BPMN documentation"
authors = ["André Carvalho <alac1984@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.96.0"
sqlmodel = "^0.0.8"
alembic = "^1.11.1"
jinja2 = "^3.1.2"
uvicorn = "^0.22.0"

[tool.poetry.group.dev.dependencies]
pynvim = "^0.4.3"
pytest = "^7.3.1"
coverage = "^7.2.7"
flake8 = "^6.0.0"
flake8-pyproject = "^1.2.3"
mypy = "^1.3.0"
black = "^23.3.0"
pre-commit = "^3.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
